--- a/src/page.ejs
+++ b/src/page.ejs
@@ -12,7 +12,13 @@
 <body>
   <header>
     <h1>memeback</h1>
-    <div id="slogan"><%= slogan %></div>
+<%
+
+const [month, day] = date.current.split('-');
+const sloganN = +month + +day;
+
+%>
+    <div id="slogan"><%- await include("slogans.ejs", { n: sloganN }) %></div>
   </header>
 
   <nav>
@@ -24,24 +30,24 @@
   <time datetime="<%= date.current %>" class="date"><%= date.human %></time>
 <%
 
-let prevYear = -1;
+let prevPostYear = -1;
 
 for (const post of posts) {
-  const year = post.date[0];
-  if (year != prevYear) {
-    if (prevYear > -1) {
+  const postYear = post.date[0];
+  if (postYear != prevPostYear) {
+    if (prevPostYear > -1) {
 %>
     </section>
 <%
 
-    } // if (prevYear > -1)
+    } // if (prevPostYear > -1)
 
 %>
     <section>
-      <h2><%= year %></h2>
+      <h2><%= postYear %></h2>
 <%
 
-  } // if (year != prevYear)
+  } // if (postYear != prevPostYear)
 
 %>
       <article>
@@ -50,7 +56,7 @@ for (const post of posts) {
       </article>
 <%
 
-  prevYear = year;
+  prevPostYear = postYear;
 } // for (const post of posts)
 
 %>
