refactor(gen/ejs): pass date to slogan partial

--- a/src/slogans.ejs
+++ b/src/slogans.ejs
@@ -1,5 +1,8 @@
 <%
 
+const [month, day] = current.split("-");
+const n = +month + +day;
+
 const slogans = [
   "undead content",
   "copyright violation",
