--- a/src/page.ejs
+++ b/src/page.ejs
@@ -12,13 +12,9 @@
 <body>
   <header>
     <h1>memeback</h1>
-<%
-
-const [month, day] = date.current.split('-');
-const sloganN = +month + +day;
-
-%>
-    <div id="slogan"><%- await include("slogans.ejs", { n: sloganN }) %></div>
+    <div id="slogan"><%-
+      await include("slogans.ejs", { current: date.current })
+    %></div>
   </header>
 
   <nav>
