feat(gen/page.ejs): link to source code

--- a/src/page.ejs
+++ b/src/page.ejs
@@ -61,7 +61,7 @@ for (const post of posts) {
 
   <footer>
     <div id="copyright">Copyright © 1998 - 2012 Memepool.Com. All Rights Reserved. For entertainment purposes only. All content is provided as is, with no warrantee stated or implied regarding the quality or accuracy of any content on or off the memepool.com website. All trademarks, servicemarks, and copyrights are property of their respective owners.</div>
-    <div id="source">memeback</div>
+    <div id="source">memeback by D.&nbsp;Bohdan. <a href="https://github.com/memeback/memeback.github.io">Source code</a>.</div>
   </footer>
 </body>
 </html>
