feat(gen/slogans): replace "$year" with year

--- a/src/slogans.ejs
+++ b/src/slogans.ejs
@@ -8,7 +8,7 @@ const slogans = [
   "copyright violation",
   "worse than you remember",
   "now with 99% fewer <font> tags",
-  "too hot for $year",
+  "too hot for " + new Date().getFullYear(),
   "on your phone",
   "coming to a blockchain near you",
   "what they mean by \"immutable\"",
