--- a/style/memeback.css
+++ b/style/memeback.css
@@ -1,14 +1,20 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   font-size: 16px;
-  margin: 0 auto;
-  width: 620px;
+  max-width: 508px;
+}
+
+@media (min-width: 500px) {
+  body {
+    margin: 8px auto;
+  }
 }
 
 header {
   background: black;
   color: white;
   text-align: center;
+  padding: 4px 0;
 }
 
 header > h1 {
@@ -21,6 +27,7 @@ nav {
   display: flex;
   font-size: 62.5%;
   justify-content: space-between;
+  margin: 12px 0;
   width: 100%;
 }
 
@@ -32,6 +39,10 @@ nav {
   margin-right: 1em;
 }
 
+section > h2 {
+  padding-left: 4px;
+}
+
 article {
   padding: 4px;
 }
@@ -40,12 +51,23 @@ article:nth-of-type(odd) {
   background: #ddd;
 }
 
+article > .metadata {
+  font-size: 62.5%;
+  padding-top: 4px;
+}
+
 time.date {
   font-weight: bolder;
 }
 
 footer {
+  padding: 4px 0;
+}
+
+footer > * {
   font-size: 62.5%;
+  padding: 4px;
+  text-align: center;
 }
 
 #copyright {
