--- a/style/memeback.css
+++ b/style/memeback.css
@@ -1,26 +1,15 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 20px;
-  max-width: 635px;
-}
-
-@media (min-width: 625px) {
-  body {
-    margin: 10px auto;
-  }
-}
-
-@media (max-width: 624px) {
-  body {
-    font-size: 16px;
-  }
+  font-size: 16px;
+  max-width: 508px;
+  margin: 8px auto;
 }
 
 header {
   background: black;
   color: white;
   text-align: center;
-  padding: 5px 0;
+  padding: 4px 0;
 }
 
 header > h1 {
@@ -31,9 +20,9 @@ header > h1 {
 
 nav {
   display: flex;
-  font-size: 14px;
+  font-size: 10px;
   justify-content: space-between;
-  margin: 15px 0;
+  margin: 12px 0;
   width: 100%;
 }
 
@@ -46,11 +35,11 @@ nav {
 }
 
 section > h2 {
-  padding-left: 5px;
+  padding-left: 4px;
 }
 
 article {
-  padding: 5px;
+  padding: 4px;
 }
 
 article:nth-of-type(odd) {
@@ -58,8 +47,8 @@ article:nth-of-type(odd) {
 }
 
 article > .metadata {
-  font-size: 14px;
-  padding-top: 5px;
+  font-size: 10px;
+  padding-top: 4px;
 }
 
 time.date {
@@ -67,16 +56,35 @@ time.date {
 }
 
 footer {
-  padding: 5px 0;
+  padding: 4px 0;
 }
 
 footer > * {
-  font-size: 14px;
-  padding: 5px;
+  font-size: 10px;
+  padding: 4px;
   text-align: center;
 }
 
 #copyright {
   background: black;
   color: white;
+}
+
+@media (max-width: 499px) {
+  body {
+    font-size: 20;
+    margin: 0;
+  }
+
+  nav {
+    font-size: 14px;
+  }
+
+  article > .metadata {
+    font-size: 14px;
+  }
+
+  footer > * {
+    font-size: 14px;
+  }
 }
